--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="google-site-verification" content="79aRhWlXZI2zQ12m8E9upotRJ3RVjfNTMTC-1hq0i9s" />
 
 	<title>Dinesh Pandiyan | Awesome Dev</title>
 
@@ -25,10 +26,10 @@
 </head>
 <body>
 	<main>
-		<div class="intro">Hello, I'm Dinesh!</div>
-		<div class="tagline">All-Star Dev | Code Fanatic | Linux Hacker | Bleh</div>
+		<div class="intro">Hello, I'm Sebastien!</div>
+		<!-- <div class="tagline">All-Star Dev | Code Fanatic | Linux Hacker | Bleh</div> -->
 		<!-- Find your icons from here - https://fontawesome.com/icons?d=gallery&s=brands -->
-		<div class="icons-social">
+		<!-- <div class="icons-social">
 			<a target="_blank" href="https://github.com/flexdinesh"><i class="fab fa-github"></i></a>
 			<a target="_blank" href="https://twitter.com/flexdinesh"><i class="fab fa-twitter"></i></a>
 			<a target="_blank" href="https://dev.to/flexdinesh"><i class="fab fa-dev"></i></a>
@@ -38,7 +39,7 @@
 			<a target="_blank" href="https://www.freecodecamp.org"><i class="fab fa-free-code-camp"></i></a>
 			<a target="_blank" href="https://www.behance.net"><i class="fab fa-behance"></i></a>
 			<a target="_blank" href="https://codepen.io"><i class="fab fa-codepen"></i></a>
-    </div>
+    </div> -->
 	</main>
 </body>
 </html>
