--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="google-site-verification" content="79aRhWlXZI2zQ12m8E9upotRJ3RVjfNTMTC-1hq0i9s" />
 
-	<title>Dinesh Pandiyan | Awesome Dev</title>
+	<title>Sebastian Michaelis Wong</title>
 
 	<link rel="icon" href="favicon.ico" type="image/png" />
 
